--- a/css/login_cadastro.css
+++ b/css/login_cadastro.css
@@ -92,7 +92,7 @@
 
 /* login */
 
-.login_form {
+.login_form1 {
     width: 50%;
     height: 100vh;
     display: flex;
@@ -222,15 +222,19 @@
         border-radius: 0px;
     }
 
-    .login_form {
+    .login_form1 {
         width: 100%;
     }
 }
 
 @media(max-width: 420px) {
+    body {
+        background-color: #1c1c1c;
+    }
+
     .login{
         width: 100%;
-        height: 1000px;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: center;
@@ -239,58 +243,48 @@
 
     .container_login {
         width: 100%;
+        height: 100vh;
         display: flex;
         flex-direction: column;
         justify-content: flex-start;
         align-items: center;
     }
-
-    .caixa_conteudo_login {
-        width: 100%;
-        height: 300px;
-    }
-
-    .caixa {
-        width: 100%;
-        height: 200px;
-        border-radius: 0px;
-    }
-
     .form_inputs {
         width: 100%;
-    }
-
-    .login_form {
-        width: 100%;
+        height: 100vh;
     }
 
     .escrita_form {
-        width: 80%;
-    }
-
-    .escrita_form h1 {
-        font-size: 20px;
-    }
-
-    .linha {
         width: 100%;
+        height: auto;
+        padding-bottom: 10px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
     }
 
     #login-form {
-        width: 300px;
-    } 
+        width: 80%;
+        height: auto;
+        padding-top: 20px;
+    }
 
     #login-form input {
         width: 100%;
-    } 
+    }
 
     #register-form {
-        width: 100%;
-        height: 100vh;
+        width: 80%;
+        height: auto;
+        padding-top: 20px;
         display: flex;
-        flex-direction: column;
         justify-content: center;
         align-items: center;
+        flex-direction: column;
     }
-    
+
+    #register-form input {
+        width: 100%;
+    }
 } 
