--- a/css/index.css
+++ b/css/index.css
@@ -553,6 +553,10 @@ footer {
         margin-bottom: 10px;
     }
 
+    .container_exibir {
+        width: 90%;
+    }
+
     footer{
         width: 100%;
         height: auto;
