--- a/css/templates_disciplina.css
+++ b/css/templates_disciplina.css
@@ -523,23 +523,22 @@ span {
 }
 
 
-@media (max-width: 480px) {
+@media (max-width: 500px) {
     body {
         background-color: #1c1c1c;
     }
 
     header {
-        height: auto;
+        width: 100%;
+        height: 70px;
+        overflow-x: hidden;
     }
-
-    
 
     .container_header_curso {
         width: 100%;
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 5px;
     }
 
     .escrita_header_curso {
@@ -581,7 +580,6 @@ span {
         justify-content: center;
         background-color: #141414;
         text-align: center;
-        margin-bottom: 20px;
     }
 
     .topicos .escrita_topicos {
@@ -604,21 +602,19 @@ span {
 
     .conteudos {
         width: 100%;
+        height: auto;
         display: flex;
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        text-align: center;
     }
 
     .conteudo {
+        width: 100%;
+        height: 100%;
         display: flex;
-        flex-direction: column;
-        align-items: center;
         justify-content: center;
-        text-align: center;
-        width: 200px;
-        padding: 0px;
+        align-items: center;
     }
 
     .conteudo h1 {
@@ -647,6 +643,31 @@ span {
         justify-content: center;
         align-items: center;
         flex-direction: column;
+    }
+
+    .container_conteudo h1 {
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
+        font-size: 25px;
+    }
+
+    .container_conteudo p {
+        width: 100%;
+        height: auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .conteudo_video {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
     }
 
     .botao_download {
