--- a/css/disciplinas.css
+++ b/css/disciplinas.css
@@ -614,6 +614,17 @@ header {
 
 }
 
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+::-webkit-scrollbar-track {
+    background: #141414;
+}
+
+::-webkit-scrollbar-thumb {
+    background: #363636; /* Cor da barra */
+}   
 @media (max-width: 500px) {
 
     .linha_grande {
