--- a/css/index.css
+++ b/css/index.css
@@ -35,16 +35,15 @@
 
 .foto_index{
     width: 100%;
-    height: 400px;
+    height:auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 20px;
 }
 
 .container_foto {
-    width: 1300px;
-    height: 100%;
+    width: 1100px;
+    height: auto;
 }
 
 .container_foto img{
