--- a/css/index.css
+++ b/css/index.css
@@ -186,9 +186,9 @@
 .container {
     display: flex;
     width: 1100px;
-    height: 400px;
+    height: 100%;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 100px;
 }
 
