--- a/css/templates_disciplina.css
+++ b/css/templates_disciplina.css
@@ -164,13 +164,31 @@ span {
 
 .elementos {
     width: 100%;
-    height: auto;
+    height: 100%; 
     display: flex;
     flex-direction: column;
-    justify-content: center;
-    align-items: flex-end;
+    justify-content: flex-start;
+    align-items: center;
     z-index: 0;
+    overflow-y: auto; 
+    scrollbar-width: thin;
+    scrollbar-color: #4c1e5c #191919;
 }
+
+/* Personalização para navegadores baseados em WebKit */
+.elementos::-webkit-scrollbar {
+    width: 7px;
+}
+
+.elementos::-webkit-scrollbar-thumb {
+    background: #4c1e5c;
+    border-radius: 10px;
+}
+
+.elementos::-webkit-scrollbar-track {
+    background: #191919;
+}
+
 
 .caixa_cor {
     width: 7px;
